       no changelists are present. (Stefan)
- NEW: two project properties (bugtraq:provideruuid and bugtraq:providerparams)
       to specifiy the IBugTraqProvider for the project. (Stefan)
- NEW: Helper dialog to resolve property conflicts. (Stefan)
- NEW: Revision graph can be collapsed / expanded as well as 
       cut and glued. (Stefan Fuhrmann)
- CHG: The bug-ID column width in the log dialog is now limited 
       to 200 pixels. (Stefan)
- CHG: The right-drag context menu now only shows "Export" if a versioned
       folder is dragged (for files, the windows 'copy' does the same). (Stefan)
- CHG: The right-drag context menu checks whether source and target are
       from the same repository and shows the "SVN move" and "SVN copy"
       commands only if they are. (Stefan)
- CHG: When only files are selected for "Add", the Add-dialog is not
       shown anymore but the files are added immediately. (Stefan)
- CHG: file:// access to BDB based repositories is no longer supported. (Stefan)
- CHG: the log dialog now shows a possible error message when fetching the
       log as a text in the top list control instead of showing a popup
       message box. (Stefan)
- CHG: New revision graph look. (Stefan Fuhrmann)
- CHG: Faster and more reliable revision graph filtering. (Stefan Fuhrmann)
- CHG: If tsvn:logtemplate was set and not changed in the commit dialog, it
       isn't added to the log history anymore. (Stefan)
- CHG: "Ambiguous URL" option no longer limits log cache functionality.
       (Stefan Fuhrmann)
       
Version 1.5.6
- CHG: Disabled capieng again - users were annoyed. (Stefan)
- BUG: possible segfault in TSVNCache when shutting down windows. (Stefan)
- BUG: The client-side hook scripts weren't started if only deletions were
       committed or updated. (Stefan)
       
Version 1.5.5
- BUG: The properties dialog would show the url with backward slashes when
       started from the repository browser. (Stefan)

Version 1.5.4