@@ -21,9 +21,11 @@
 #include "ConflictEditorCommand.h"
 #include "SVNStatus.h"
 #include "SVNDiff.h"
+#include "SVNInfo.h"
 #include "UnicodeUtils.h"
 #include "AppUtils.h"
 #include "EditPropConflictDlg.h"
+#include "TreeConflictEditorDlg.h"
 
 bool ConflictEditorCommand::Execute()
 {
@@ -87,13 +89,131 @@ bool ConflictEditorCommand::Execute()
 			CEditPropConflictDlg dlg;
 			dlg.SetPrejFile(prej);
 			dlg.SetConflictedItem(merge);
-			dlg.DoModal();
+			bRet = (dlg.DoModal() != IDCANCEL);
 		}
 	}
 
 	if (stat.status->tree_conflicted)
 	{
 		// we have a tree conflict
+		SVNInfo info;
+		const SVNInfoData * pInfoData = info.GetFirstFileInfo(merge, SVNRev(), SVNRev());
+		if (pInfoData)
+		{
+			if (pInfoData->treeconflict_kind == svn_wc_conflict_kind_text)
+			{
+				CTSVNPath theirs(directory);
+				CTSVNPath mine(directory);
+				CTSVNPath base(directory);
+				bool bConflictData = false;
+
+				if (pInfoData->treeconflict_theirfile)
+				{
+					theirs.AppendPathString(pInfoData->treeconflict_theirfile);
+					bConflictData = true;
+				}
+				if (pInfoData->treeconflict_basefile)
+				{
+					base.AppendPathString(pInfoData->treeconflict_basefile);
+					bConflictData = true;
+				}
+				if (pInfoData->treeconflict_myfile)
+				{
+					mine.AppendPathString(pInfoData->treeconflict_myfile);
+					bConflictData = true;
+				}
+				else
+				{
+					mine = merge;
+				}
+				if (bConflictData)
+					bRet = !!CAppUtils::StartExtMerge(base,theirs,mine,merge);
+			}
+			else if (pInfoData->treeconflict_kind == svn_wc_conflict_kind_tree)
+			{
+				CString sOperation;
+				CString sFileOrFolder;
+				CString sConflictAction;
+				CString sConflictReason;
+				CString sResolveTheirs;
+				CString sResolveMine;
+				
+				if (pInfoData->treeconflict_nodekind == svn_node_file)
+					sFileOrFolder.LoadString(IDS_TREECONFLICT_NODEFILE);
+				else if (pInfoData->treeconflict_nodekind == svn_node_dir)
+					sFileOrFolder.LoadString(IDS_TREECONFLICT_NODEDIR);
+				else
+					// we should *never* get here, but if we do, provide some info
+					// for users so they might report this
+					sFileOrFolder = _T("(don't know if it's a file or directory)");
+
+				switch (pInfoData->treeconflict_operation)
+				{
+				case svn_wc_operation_update:
+					sOperation.LoadString(IDS_TREECONFLICT_OPERATION_UPDATE);
+					break;
+				case svn_wc_operation_switch:
+					sOperation.LoadString(IDS_TREECONFLICT_OPERATION_SWITCH);
+					break;
+				case svn_wc_operation_merge:
+					sOperation.LoadString(IDS_TREECONFLICT_OPERATION_MERGE);
+					break;
+				}
+
+				switch (pInfoData->treeconflict_action)
+				{
+				case svn_wc_conflict_action_edit:
+					sConflictAction.LoadString(IDS_TREECONFLICT_ACTION_EDIT);
+					sResolveTheirs.Format(IDS_TREECONFLICT_RESOLVE_KEEPREPOSITORY, (LPCTSTR)sFileOrFolder);
+					break;
+				case svn_wc_conflict_action_add:
+					sConflictAction.LoadString(IDS_TREECONFLICT_ACTION_ADD);
+					sResolveTheirs.Format(IDS_TREECONFLICT_RESOLVE_KEEPREPOSITORY, (LPCTSTR)sFileOrFolder);
+					break;
+				case svn_wc_conflict_action_delete:
+					sConflictAction.LoadString(IDS_TREECONFLICT_ACTION_DELETE);
+					sResolveTheirs.Format(IDS_TREECONFLICT_RESOLVE_REMOVE, (LPCTSTR)sFileOrFolder);
+					break;
+				}
+
+				UINT uReasonID = 0;
+				switch (pInfoData->treeconflict_reason)
+				{ 
+				case svn_wc_conflict_reason_edited:
+					uReasonID = IDS_TREECONFLICT_REASON_EDITED;
+					sResolveMine.Format(IDS_TREECONFLICT_RESOLVE_KEEPLOCAL, (LPCTSTR)sFileOrFolder); // keep local file/directory
+					break;
+				case svn_wc_conflict_reason_obstructed:
+					uReasonID = IDS_TREECONFLICT_REASON_OBSTRUCTED;
+					sResolveMine.Format(IDS_TREECONFLICT_RESOLVE_KEEPLOCAL, (LPCTSTR)sFileOrFolder);
+					break;
+				case svn_wc_conflict_reason_deleted:
+					uReasonID = IDS_TREECONFLICT_REASON_DELETED;
+					sResolveMine.Format(IDS_TREECONFLICT_RESOLVE_REMOVE), (LPCTSTR)sFileOrFolder;
+					break;
+				case svn_wc_conflict_reason_added:
+					uReasonID = IDS_TREECONFLICT_REASON_ADDED;
+					sResolveMine.Format(IDS_TREECONFLICT_RESOLVE_KEEPLOCAL, (LPCTSTR)sFileOrFolder);
+					break;
+				case svn_wc_conflict_reason_missing:
+					uReasonID = IDS_TREECONFLICT_REASON_MISSING;
+					sResolveMine.Format(IDS_TREECONFLICT_RESOLVE_REMOVE), (LPCTSTR)sFileOrFolder;
+					break;
+				case svn_wc_conflict_reason_unversioned:
+					uReasonID = IDS_TREECONFLICT_REASON_UNVERSIONED;
+					sResolveMine.Format(IDS_TREECONFLICT_RESOLVE_KEEPLOCAL, (LPCTSTR)sFileOrFolder);
+					break;
+				}
+				// The last %s operation tried to %s the %s '%s', but ....
+				sConflictReason.Format(uReasonID, (LPCTSTR)sOperation, (LPCTSTR)sConflictAction, (LPCTSTR)sFileOrFolder, (LPCTSTR)pInfoData->treeconflict_path);
+
+				CTreeConflictEditorDlg dlg;
+				dlg.SetConflictInfoText(sConflictReason);
+				dlg.SetResolveTexts(sResolveTheirs, sResolveMine);
+				dlg.SetPath(CTSVNPath(pInfoData->treeconflict_path));
+				bRet = (dlg.DoModal() != IDCANCEL);
+			}
+		}
 	}
 
 	return bRet;
